# aimwrapper

./: .gitignore  CMakeLists.txt
source/aimwrapper/: aimwrapper.cpp  aimwrapper.h  item.cpp  item.h  wrapperClass.cpp  wrapperClass.h
source/app/: app.cpp
source/module/: module.cpp
